tests/invalid/range_no_args/main.py
def run_case() -> None:
    x: list[int] = [i for i in range()]

if __name__ == "__main__":
    run_case()
